--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
   "author": "Vishnu Kumar <vishnukumart96@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev" : "npx tsc -b && node dist/index.js"
+    "dev": "npx tsc -b && node dist/index.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-ws": "^3.0.4",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "express-ws": "^5.0.2",
+    "openai": "^4.28.4",
+    "retell-sdk": "^2.3.3"
   }
 }
