--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.3",
     "express-ws": "^5.0.2",
     "openai": "^4.28.4",
-    "retell-sdk": "^2.3.3"
+    "retell-sdk": "^2.3.3",
+    "zod": "^3.22.4"
   }
 }
